css/freelancer.css
/* ... */
hr.star-light:after,
hr.star-primary:after {
  content: "\f005";
  font-family: FontAwesome;
  display: inline-block;
  position: relative;
  top: -0.8em;
  font-size: 2em;
  padding: 0 0.25em;
}
hr.star-light {
  border-color: white;
}
hr.star-light:after {
  background-color: #18BC9C;
  color: white;
}
hr.star-primary {
  border-color: #2C3E50;
}
hr.star-primary:after {
  background-color: white;
  color: #2C3E50;
}
hr.profile-line {
  border: 3px solid rgba(255, 255, 255, 1);
  width: 100px;
  border-radius: 10px;
}
hr.hr-line {
  border: 3px solid black;
  width: 100px;
  border-radius: 10px;
  margin-bottom: 40px;
}
.img-centered {
  margin: 0 auto;
}
#wrapper {
  position: absolute;
}
header {
  text-align: center;
  background:
    linear-gradient(
      rgba(70, 70, 70, 0.75),
      rgba(70, 70, 70, 0.75)
    ),
    no-repeat center center url(../img/github/coding_sm.jpeg);

  color: white;
  webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
    

  margin-bottom: 0px;
  padding: 0px;
}
@media only screen and (max-width: 767px) {
  header {
    /* The file size of this background image is 93% smaller
       to improve page load speed on mobile internet connections */
    background-attachment: scroll;
  }
}
nav img.nav-pic {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 2px 20px 0 rgba(0, 0, 0, 0.5);

  margin: 10px 25px 10px 25px;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
}

header .container {
  padding-top: 125px;
  padding-bottom: 100px;
}
.profile-pic {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 2px 20px 0 rgba(0, 0, 0, 0.5);
  filter: brightness(135%);

  display: block;
  margin: 0 auto;
  margin-bottom: 15px;
    margin-top: -50px;
  width: 220px;
  height: 220px;
  border-radius: 50%;
  border: 3px solid;
  text-align: center;
  vertical-align: middle;
  z-index: 0;
  opacity: 0.9;

}
#skills {
    background-color: white;
    color: black;
}
.about-me-text {
  font-size: 14pt;
}
#about {
  background: rgba(0, 85, 128, 0.6);
}
.profile-pic-about {
  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.9), 0 2px 20px 0 rgba(0, 0, 0, 0.5);

  display: block;
  margin: 0 auto;
  margin-top: 40px;
  margin-bottom: 10px;
  width: 250px;
  height: 250px;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
  z-index: 0;
  opacity: 1;
}
header .intro-text .name, .skills {
  box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.9), 0 2px 2px 0 rgba(0, 0, 0, 0.9);
  display: inline-block;
  padding: 10px;
}
header .intro-text .name {
  font-family: "Varela Round", "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 2em;
}
header .intro-text .skills {
  /*animation: 1.4s ease-in-out 0s 1 slideInFromBottom;*/
  font-size: 1.2em;
  font-weight: 200;
  font-family: "Varela Round", "sans-serif";
  letter-spacing: 0.05em;
  margin: 0 40px 0 40px;
}
@media (min-width: 768px) {
  header .container {
    padding-top: 200px;
    padding-bottom: 200px;
  }
  header .intro-text .name {
    font-size: 3.75em;
    padding: 30px;
  }
  header .intro-text .skills {
    padding: 30px;
    margin-top: 10px;
  }
  header img.pic {
    width: 100px;
    height: 100px;
  }
  .profile-pic {
    width: 275px;
    height: 275px;
  }
}
.no-bullets {
  list-style-type: none;
  margin: 0 auto;
}
.item-title {
  font-size: 16pt;
  font-weight: 200;
}
#languages {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
  font-size: 16pt;
}
#languages ul > li {
  min-height: 30px;
  padding: 5px;
}
#languages ul > li:hover {
  background: #F2F2F2;
}
#languages ul > li .item-title-language {
  display: inline-block;
  width: 40%;
}
#languages ul > li .item-title-area {
  display: inline-block;
  width: 100%;
}
#languages ul > li .item-title-os {
  display: inline-block;
  width: 100%;
}

#languages ul > li .confidence-rating .glyphicon {
  color: #DFE0E0;
  font-size: 18px;

  -webkit-transition: all 0.12s;
  -moz-transition: all 0.12s;
  -o-transition: all 0.12s;
  transition: all 0.12s;
}
#languages ul > li .confidence-rating .glyphicon.filled {
  color: #ff9900;
}

#languages ul > li:hover .confidence-rating .glyphicon {
  margin-left: 5px;
  transform: scale(1.4);
}
#language-header {
  font-size: 16pt;
  margin-left: 45px;
  margin-bottom: 15px;
}
.navbar-custom {
  background: none;
  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  font-weight: 700;
  border: none;
}
.navbar-custom .navbar-brand {
  color: white;
  margin-top: 15px;
}
.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus,
.navbar-custom .navbar-brand:active,
.navbar-custom .navbar-brand.active {
  color: white;
}
.navbar-custom .navbar-nav {
  letter-spacing: 1px;
  text-align: center;
}
.navbar-custom .navbar-nav li a {
  color: white;
  margin-top: 15px;
}
.navbar-custom .navbar-nav li a:hover {
  color: white;
  background-color: rgba(102, 179, 255, 0.55);
}
.navbar-custom .navbar-nav li a:focus,
.navbar-custom .navbar-nav li a:active {
  color: white;
}
.navbar-custom .navbar-nav li.active a {
  color: white;
  background: #18BC9C;
}
.navbar-custom .navbar-nav li.active a:hover,
.navbar-custom .navbar-nav li.active a:focus,
.navbar-custom .navbar-nav li.active a:active {
  color: white;
  background: #18BC9C;
}
.navbar-custom .navbar-toggle {
  color: white;
  text-transform: uppercase;
  font-size: 10px;
  border-color: white;
  margin-top: 20px;
    
}
.navbar-custom .navbar-toggle:hover,
.navbar-custom .navbar-toggle:focus {
  background-color: #18BC9C;
  color: white;
  border-color: #18BC9C;
}
.navbar-fixed-top.scrolled {
  background-color: rgba(102, 179, 255, 0.75) !important;
  transition: background-color 300ms linear;
}
/* ... */

